# gldas-icechunk-updater

./: .gitignore  README.md  main.py  pyproject.toml
cdk/lambda/: requirements.txt
examples/: earthdata_refreshable_credentials.py
